--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,8 @@ $windowBorderRadius: 14px;
 $threeBoxBlack: #181F21;
 $threeBoxBlackHover: rgb(47, 56, 58);
 
+$defaultReceivedBubbleColor: #ECECEC;
+
 $maxCommentWidth: 600px;
 $minCommentWidth: 300px;
 
